Imported Upstream version 0.5

--- a/.auxlaunchrc
+++ b/.auxlaunchrc
@@ -1,5 +1,5 @@
+"My Group",
+XTerm,xterm,/usr/share/pixmaps/xterm-color_32x32.xpm,
 Suspend,apm -s,gtk-media-pause,
-Midori,/usr/bin/midori &,midori_small.jpg,
-xterm,xterm &,gtk-execute,
 Cancel,(cancel),gtk-cancel,
 Quit,(quit),gtk-quit,
