Imported Upstream version 0.5-2

--- a/.auxlaunchrc
+++ b/.auxlaunchrc
@@ -3,3 +3,8 @@ XTerm,xterm,/usr/share/pixmaps/xterm-color_32x32.xpm,
 Suspend,apm -s,gtk-media-pause,
 Cancel,(cancel),gtk-cancel,
 Quit,(quit),gtk-quit,
+Reload,(reload),gtk-redo,
+-Desktop,
+-auxlaunch,
+-panel,
+-Keyboard,
