fix lintian clean-should-be-satisfied-by-build-depends

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: auxlaunch
 Section: x11
 Priority: extra
 Maintainer: Christian M. Amsüss <chrysn@fsfe.org>
-Build-Depends-Indep: debhelper (>= 7), python
+Build-Depends: debhelper (>= 7)
+Build-Depends-Indep: python
 Standards-Version: 3.8.0
 Homepage: http://aliasid.googlepages.com/auxlaunch
 
